<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/photoeditfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="40dip"
    android:orientation="vertical"
    android:showDividers="middle" >

    <TextView
        android:id="@+id/photoedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dip"
        android:text="@string/recipephoto"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <LinearLayout
        android:id="@+id/photobuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/photoeditattach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:text="@string/photoeditattach" />

        <Button
            android:id="@+id/photoeditremove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/photoeditremove" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/photoframe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/photoeditphoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center" android:contentDescription="@string/altrecipe_photo"/>
    </FrameLayout>

</LinearLayout>